--- a/57_Projeto_Academia/57_Projeto_Academia.csproj
+++ b/57_Projeto_Academia/57_Projeto_Academia.csproj
@@ -78,6 +78,18 @@
     <Compile Include="F_GestaoUsuarios.Designer.cs">
       <DependentUpon>F_GestaoUsuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="F_Gestao_De_Professores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_Gestao_De_Professores.Designer.cs">
+      <DependentUpon>F_Gestao_De_Professores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="F_Horarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_Horarios.Designer.cs">
+      <DependentUpon>F_Horarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="F_Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +111,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="F_GestaoUsuarios.resx">
       <DependentUpon>F_GestaoUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_Gestao_De_Professores.resx">
+      <DependentUpon>F_Gestao_De_Professores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_Horarios.resx">
+      <DependentUpon>F_Horarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="F_Login.resx">
       <DependentUpon>F_Login.cs</DependentUpon>
