--- a/57_Projeto_Academia/57_Projeto_Academia.csproj
+++ b/57_Projeto_Academia/57_Projeto_Academia.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="F_GestaoDeTurmas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_GestaoDeTurmas.Designer.cs">
+      <DependentUpon>F_GestaoDeTurmas.cs</DependentUpon>
+    </Compile>
     <Compile Include="F_GestaoUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     <Compile Include="Usuario.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_GestaoDeTurmas.resx">
+      <DependentUpon>F_GestaoDeTurmas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="F_GestaoUsuarios.resx">
       <DependentUpon>F_GestaoUsuarios.cs</DependentUpon>
